# shinobu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ci/: windows.bat
ci/release/: linux.sh  windows.sh
glsl/: fragment.glsl  vertex.glsl
images/: keyboard-layout.json
include/: CPU.hpp  ROM.hpp
include/common/: Formatter.hpp  Logger.hpp  Performance.hpp  System.hpp  Timing.hpp
include/core/: CPU.hpp  CPU.tcc  Memory.hpp  ROM.hpp  Table.hpp
include/core/cpu/: CPU.hpp  CPU.tcc  Decoding.hpp  Disassembler.hpp  Disassembler.tcc  Instructions.hpp  Table.hpp
include/core/device/: DirectMemoryAccess.hpp  Interrupt.hpp  JoypadInput.hpp  PictureProcessingUnit.hpp  SerialCommunicationController.hpp  SerialDataTransfer.hpp  Sound.hpp  Timer.hpp
include/shinobu/: ArgumentParser.hpp  Configuration.hpp  Disassembler.hpp  Emulator.hpp  Runner.hpp  Sentry.hpp
include/shinobu/frontend/: Palette.hpp  Performance.hpp  Renderer.hpp
include/shinobu/frontend/imgui/: Renderer.hpp
include/shinobu/frontend/opengl/: Buffer.hpp  Framebuffer.hpp  Program.hpp  Renderer.hpp  Shaders.hpp  Texture.hpp  TextureArray.hpp  TextureRenderer.hpp  Vertex.hpp  VertexArrayObject.hpp  VertexRenderer.hpp
include/shinobu/frontend/performance/: Renderer.hpp
include/shinobu/frontend/screen/: Renderer.hpp
include/shinobu/frontend/sdl2/: Error.hpp  GameController.hpp  Renderer.hpp  Window.hpp
src/: CPU.cpp  ROM.cpp  main.cpp
src/common/: Formatter.cpp  Logger.cpp
src/core/: CPU.cpp  Memory.cpp  ROM.cpp
src/core/cpu/: CPU.cpp  Disassembler.cpp
src/core/device/: DirectMemoryAccess.cpp  Interrupt.cpp  JoypadInput.cpp  PictureProcessingUnit.cpp  SerialCommunicationController.cpp  SerialDataTransfer.cpp  Sound.cpp  Timer.cpp
src/shinobu/: ArgumentParser.cpp  Configuration.cpp  Disassembler.cpp  Emulator.cpp  Runner.cpp  Sentry.cpp
src/shinobu/frontend/: Palette.cpp  Renderer.cpp
src/shinobu/frontend/imgui/: Renderer.cpp
src/shinobu/frontend/opengl/: Buffer.cpp  Framebuffer.cpp  Program.cpp  Renderer.cpp  Texture.cpp  TextureArray.cpp  TextureRenderer.cpp  Vertex.cpp  VertexArrayObject.cpp  VertexRenderer.cpp
src/shinobu/frontend/performance/: Renderer.cpp
tests/: README.md  run.sh  test-locations.txt
tests/blargg/: test-locations.txt
tests/interrupt/: test-locations.txt
tests/oam-dma-timing/: test-locations.txt
tests/timer/: test-locations.txt
(+7 files in other folders)
